2013-11-01  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dtrace_hdl_t.dt_procfs_path): Remove, unused.
	* libdtrace/dt_open.c (dt_vopen): Just call Pset_procfs_path() directly.
	* libdtrace/dt_options.c (dt_opt_procfs_path): Likewise.

	* libdtrace/dt_open.c (dtrace_close): Free the dt_module_path.
	* libdtrace/dt_module.c (d_tkern_path_update): Close the fts handle.

2013-11-01  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dtrace_hdl_t.dt_procfs_path): Remove, unused.
	* libdtrace/dt_open.c (dt_vopen): Just call Pset_procfs_path() directly.
	* libdtrace/dt_options.c (dt_opt_procfs_path): Likewise.

	* libdtrace/dt_open.c (dtrace_close): Free the dt_module_path.

2013-11-01  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dtrace_hdl_t.dt_procfs_path): Remove, unused.
	* libdtrace/dt_open.c (dt_vopen): Just call Pset_procfs_path() directly.
	* libdtrace/dt_options.c (dt_opt_procfs_path): Likewise.

2013-10-31  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dtrace.h (dtrace_stmtdesc_t): Add padding to work
	around a GCC bug.
	* INCOMPATIBILITIES: Document it.

2013-11-05  Kris Van Hees <kris.van.hees@oracle.com>

	* test/unittest/builtinvar/tst.errno2.d: Test errno value in syscall.
	* libdtrace/io.d.in: Fix dev_statname and dev_pathname.

2013-10-22  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_lex.c (YY_INPUT): Split out into...
	(dt_input): ... this new function.  No longer check for parser
	errors.  Use memcpy() for string input.
	(EOF rules): Introduce, for states S1 and S3.
	* test/unittest/lexer/err.eof-in-comment.d: Check that EOF in a
	comment is diagnosed.
	* test/unittest/lexer/err.eof-in-pragma.d: Likewise, for pragmata.
	* test/unittest/lexer/tst.yyinput-pragma-bug.d: Make sure that
	pragmata that span the 8192-byte boundary do not cause spurious
	errors.
	* NEWS: Describe this change.

2013-09-19  Nick Alcock  <nick.alcock@oracle.com>

	* Build: Install NEWS too.